# mongo-flux

./: .env.example  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  go.mod
benchmark/: aggregation_1m_results.json  aggregation_benchmark.py  aggregation_results.json  breakeven_benchmark.py  breakeven_results.json  cluster-config.xml  distributed_benchmark.py  distributed_results.json  docker-compose-cluster.yml  read_10m_results.json  read_1m_results.json  read_benchmark.py  real_data_benchmark.py  real_data_results.json  results.json  write_benchmark.py  write_results.json
cmd/benchmark/: aggregation.go  breakeven.go  helpers.go  main.go  read.go  write.go
cmd/mongoflux/: main.go
config/: mg-clickhouse-docker.yaml  mg-clickhouse.yaml  mongoflux-docker.yaml  mongoflux.yaml
docs/: article.html  article.md  design.html  design.md
include/mg_clickhouse/: bson_utils.h  change_stream_sync.h  clickhouse_client.h  config.h  expr_tree.h  management_api.h  metrics.h  mongo_proxy.h  oplog_sync.h  query_translator.h  routing.h  schema_mapping.h
include/mongoflux/: bson_utils.h  change_stream_sync.h  clickhouse_client.h  config.h  expr_tree.h  management_api.h  metrics.h  mongo_proxy.h  oplog_sync.h  query_translator.h  routing.h  schema_mapping.h  wire_proxy.h
internal/api/: api.go
internal/clickhouse/: client.go
internal/config/: config.go  config_test.go
internal/metrics/: metrics.go
internal/routing/: routing_test.go
internal/schema/: mapping.go  mapping_test.go
internal/sync/: changestream.go  oplog.go
internal/translator/: expr.go  translator.go  translator_test.go
mongoflux-go/: Dockerfile
mongoflux-go/internal/api/: api.go
mongoflux-go/internal/config/: config.go  config_test.go
mongoflux-go/internal/routing/: routing.go
mongoflux-go/internal/schema/: mapping_test.go
src/: change_stream_sync.cpp  clickhouse_client.cpp  config.cpp  expr_tree.cpp  main.cpp  management_api.cpp  mongo_proxy.cpp  oplog_sync.cpp  query_translator.cpp  routing.cpp  schema_mapping.cpp  wire_proxy.cpp
test-app/: test_mg_clickhouse.py  test_mongoflux.py
